# openapi.yaml
@@ -7,7 +7,10 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: '3.0'
 servers:
+  - url: http://localhost:3000
+    description: Json Server
   - url: http://localhost:8080/services/api
+    description: WebStore API
 security:
   - bearerAuth: []
 paths:
@@ -181,22 +184,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Address'
-    put:
-      tags:
-        - Account
-      summary: Update address info
-      description: Updating address info
-      operationId: updateAddress
-      requestBody:
-        description: Address Form
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Address'
-        required: true
-      responses:
-        '200':
-          description: Address updated
   /account/addresses/{id}:
     parameters:
       - name: id
@@ -219,6 +206,22 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Address'
+    put:
+      tags:
+        - Account
+      summary: Update address info
+      description: Updating address info
+      operationId: updateAddress
+      requestBody:
+        description: Address Form
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Address'
+        required: true
+      responses:
+        '200':
+          description: Address updated
     delete:
       tags:
         - Account
